--- a/notebooks/datasetCleaning.ipynb
+++ b/notebooks/datasetCleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "4  Existing           NaN  {'type': 'MultiPoint', 'coordinates': [[-79.42...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "4  2018-10-10 20:00:00     145  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -343,19 +343,12 @@
       "3               26.0                  0.0  2018-10-10 20:00:00   \n",
       "4               26.0                  0.0  2018-10-10 19:00:00   \n",
       "\n",
-      "      datetime_bin_end  volume                 intersection   latitude  \\\n",
-      "0  2018-10-11 00:00:00      32  ADELAIDE ST E AND JARVIS ST  43.651314   \n",
-      "1  2018-10-10 23:00:00      50  ADELAIDE ST E AND JARVIS ST  43.651314   \n",
-      "2  2018-10-10 22:00:00      44  ADELAIDE ST E AND JARVIS ST  43.651314   \n",
-      "3  2018-10-10 21:00:00      58  ADELAIDE ST E AND JARVIS ST  43.651314   \n",
-      "4  2018-10-10 20:00:00     145  ADELAIDE ST E AND JARVIS ST  43.651314   \n",
-      "\n",
-      "   longitude  \n",
-      "0 -79.372248  \n",
-      "1 -79.372248  \n",
-      "2 -79.372248  \n",
-      "3 -79.372248  \n",
-      "4 -79.372248  \n"
+      "      datetime_bin_end  volume   latitude  longitude  \n",
+      "0  2018-10-11 00:00:00      32  43.651314 -79.372248  \n",
+      "1  2018-10-10 23:00:00      50  43.651314 -79.372248  \n",
+      "2  2018-10-10 22:00:00      44  43.651314 -79.372248  \n",
+      "3  2018-10-10 21:00:00      58  43.651314 -79.372248  \n",
+      "4  2018-10-10 20:00:00     145  43.651314 -79.372248  \n"
      ]
     }
    ],
@@ -445,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +458,7 @@
       "28044  LANSDOWNE AVE NB S OF DAVENPORT RD  43.671555 -79.448289\n",
       "28045  LANSDOWNE AVE NB S OF DAVENPORT RD  43.671555 -79.448289\n",
       "\n",
-      "[28046 rows x 3 columns]\n",
+      "[20558 rows x 3 columns]\n",
       "                                                geometry\n",
       "0      {'type': 'MultiPoint', 'coordinates': [[-79.41...\n",
       "1      {'type': 'MultiPoint', 'coordinates': [[-79.40...\n",
@@ -495,58 +488,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\mlproject-dev\\mlproject-dev\\venv\\Lib\\site-packages\\geopandas\\array.py:403: UserWarning: Geometry is in a geographic CRS. Results from 'sjoin_nearest' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
-      "\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   centreline_id  direction                         location class_type  \\\n",
-      "0        8313231  Eastbound  ADELAIDE ST E EB W OF JARVIS ST   Cyclists   \n",
-      "1        8313231  Eastbound  ADELAIDE ST E EB W OF JARVIS ST   Cyclists   \n",
-      "2        8313231  Eastbound  ADELAIDE ST E EB W OF JARVIS ST   Cyclists   \n",
-      "3        8313231  Eastbound  ADELAIDE ST E EB W OF JARVIS ST   Cyclists   \n",
-      "4        8313231  Eastbound  ADELAIDE ST E EB W OF JARVIS ST   Cyclists   \n",
+      "   _id  OBJECTID        ID ADDRESSNUMBERTEXT   ADDRESSSTREET FRONTINGSTREET  \\\n",
+      "0    1         5  BP-05830         4841-4881        Yonge St            NaN   \n",
+      "1    2        34  BP-03501                 8  Kensington Ave            NaN   \n",
+      "2    3        35  BP-11699                70     The Pond Rd            NaN   \n",
+      "3    4       107  BP-12883                21      Canniff St            NaN   \n",
+      "4    5       172  BP-15331               911    Davenport Rd            NaN   \n",
       "\n",
-      "   daily_temperature  daily_precipitation   datetime_bin_start  \\\n",
-      "0               26.0                  0.0  2018-10-10 23:00:00   \n",
-      "1               26.0                  0.0  2018-10-10 22:00:00   \n",
-      "2               26.0                  0.0  2018-10-10 21:00:00   \n",
-      "3               26.0                  0.0  2018-10-10 20:00:00   \n",
-      "4               26.0                  0.0  2018-10-10 19:00:00   \n",
+      "  SIDE      FROMSTREET DIRECTION SITEID  ...  location class_type  \\\n",
+      "0  NaN  Harlandale Ave       NaN    NaN  ...       NaN        NaN   \n",
+      "1  NaN  Kensington Ave       NaN    NaN  ...       NaN        NaN   \n",
+      "2  NaN     Seneca Lane       NaN    NaN  ...       NaN        NaN   \n",
+      "3  NaN    Strachan Ave       NaN    NaN  ...       NaN        NaN   \n",
+      "4  NaN    Davenport Rd       NaN    NaN  ...       NaN        NaN   \n",
       "\n",
-      "      datetime_bin_end  volume                 intersection  ...  SIDE  \\\n",
-      "0  2018-10-11 00:00:00      32  ADELAIDE ST E AND JARVIS ST  ...  East   \n",
-      "1  2018-10-10 23:00:00      50  ADELAIDE ST E AND JARVIS ST  ...  East   \n",
-      "2  2018-10-10 22:00:00      44  ADELAIDE ST E AND JARVIS ST  ...  East   \n",
-      "3  2018-10-10 21:00:00      58  ADELAIDE ST E AND JARVIS ST  ...  East   \n",
-      "4  2018-10-10 20:00:00     145  ADELAIDE ST E AND JARVIS ST  ...  East   \n",
+      "  daily_temperature daily_precipitation  datetime_bin_start datetime_bin_end  \\\n",
+      "0               NaN                 NaN                 NaN              NaN   \n",
+      "1               NaN                 NaN                 NaN              NaN   \n",
+      "2               NaN                 NaN                 NaN              NaN   \n",
+      "3               NaN                 NaN                 NaN              NaN   \n",
+      "4               NaN                 NaN                 NaN              NaN   \n",
       "\n",
-      "      FROMSTREET DIRECTION  SITEID  WARD                                BIA  \\\n",
-      "0  Adelaide St E     South     NaN  13.0  St. Lawrence Market Neighbourhood   \n",
-      "1  Adelaide St E     South     NaN  13.0  St. Lawrence Market Neighbourhood   \n",
-      "2  Adelaide St E     South     NaN  13.0  St. Lawrence Market Neighbourhood   \n",
-      "3  Adelaide St E     South     NaN  13.0  St. Lawrence Market Neighbourhood   \n",
-      "4  Adelaide St E     South     NaN  13.0  St. Lawrence Market Neighbourhood   \n",
+      "   volume  latitude longitude distance_meters  \n",
+      "0     NaN       NaN       NaN             NaN  \n",
+      "1     NaN       NaN       NaN             NaN  \n",
+      "2     NaN       NaN       NaN             NaN  \n",
+      "3     NaN       NaN       NaN             NaN  \n",
+      "4     NaN       NaN       NaN             NaN  \n",
       "\n",
-      "  ASSETTYPE    STATUS SDE_STATE_ID distance_meters  \n",
-      "0      Ring  Existing          NaN       28.263407  \n",
-      "1      Ring  Existing          NaN       28.263407  \n",
-      "2      Ring  Existing          NaN       28.263407  \n",
-      "3      Ring  Existing          NaN       28.263407  \n",
-      "4      Ring  Existing          NaN       28.263407  \n",
-      "\n",
-      "[5 rows x 30 columns]\n"
+      "[5 rows x 29 columns]\n"
      ]
     }
    ],
@@ -593,13 +570,13 @@
     "\n",
     "\n",
     "\n",
-    "# Step 4: If you want to limit the join to points within a certain distance (e.g., 1000 meters)\n",
+    "# Step 4: If you want to limit the join to points within a certain distance (e.g., 200 meters)\n",
     "# First, we need to project to a local CRS for accurate distance measurement\n",
     "# For Toronto, we can use EPSG:32617 (UTM zone 17N)\n",
     "cyclist_traffic_gdf_utm = cyclist_traffic_gdf.to_crs(\"EPSG:32617\")\n",
     "bike_parking_gdf_utm = bike_parking_gdf.to_crs(\"EPSG:32617\")\n",
     "\n",
-    "merged_gdf_utm = gpd.sjoin_nearest(cyclist_traffic_gdf_utm, bike_parking_gdf_utm, how=\"left\", distance_col=\"distance_meters\", max_distance=1000)\n",
+    "merged_gdf_utm = gpd.sjoin_nearest(bike_parking_gdf_utm,cyclist_traffic_gdf_utm, how=\"left\", distance_col=\"distance_meters\", max_distance=200)\n",
     "\n",
     "# Step 5: Convert back to EPSG:4326\n",
     "merged_gdf_final = merged_gdf_utm.to_crs(\"EPSG:4326\")\n",
@@ -611,30 +588,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-07-27 17:42:48,732 - INFO - Created 20,558 records\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Save the merged GeoDataFrame to a file in the data/processed folder\n",
-    "output_path = \"../data/processed/merged_gdf_final.geojson\"\n",
-    "merged_gdf_final.to_file(output_path, driver=\"GeoJSON\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_path = \"../data/processed/merged_gdf_final.csv\"\n",
+    "output_path = \"../data/processed/merged_cycling_data.csv\"\n",
+    "merged_gdf_final.drop(['OBJECTID', 'SITEID', 'FRONTINGSTREET', 'SIDE', 'latitude', 'longitude'], axis=1, inplace=True)\n",
+    "\n",
+    "#  Handle missing values-- Remove rows with missing values\n",
+    "merged_gdf_final.dropna(subset=['volume'], inplace=True)\n",
+    "\n",
+    "# Step 4: Remove duplicates\n",
+    "merged_gdf_final.drop_duplicates(inplace=True)\n",
+    "\n",
     "merged_gdf_final.to_csv(output_path, index=False)"
    ]
   }
