--- a/src/models/Regression2.ipynb
+++ b/src/models/Regression2.ipynb
@@ -194,19 +194,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best parameters: {'regressor__max_depth': 15, 'regressor__min_samples_leaf': 1, 'regressor__min_samples_split': 2, 'regressor__n_estimators': 60}\n",
-      "Best negative MSE: -1171.7833983858823\n",
+      "Best parameters: {'regressor__max_depth': 40, 'regressor__min_samples_leaf': 3, 'regressor__min_samples_split': 2, 'regressor__n_estimators': 80}\n",
+      "Best negative MSE: -669.9702088105089\n",
       "\n",
       "Random Forest Regression Results:\n",
-      "Mean Squared Error: 1058.8169356315643\n",
-      "R2 Score: 0.6934505857449818\n"
+      "Mean Squared Error: 583.97912854029\n",
+      "R2 Score: 0.830925957295535\n"
      ]
     }
    ],
@@ -220,10 +220,10 @@
     "\n",
     "# Define the parameter grid\n",
     "param_grid = {\n",
-    "    'regressor__n_estimators': [20, 60, 80],\n",
-    "    'regressor__max_depth': [3, 5, 10, 15],  \n",
-    "    'regressor__min_samples_split': [2, 5, 8],\n",
-    "    'regressor__min_samples_leaf': [1, 2, 4]\n",
+    "    'regressor__n_estimators': [80,100],\n",
+    "    'regressor__max_depth': [30,40],  \n",
+    "    'regressor__min_samples_split': [2,4],\n",
+    "    'regressor__min_samples_leaf': [3,5]\n",
     "}\n",
     "\n",
     "# Create the grid search object\n",
